syntax = "proto3";

package example.simple;

option go_package = "github.com/gain620/proto-go-course/proto";

message Simple {
  uint32 id = 1;
  bool is_simple = 2;
  string name = 3;
  string game_title = 4;
  repeated int32 sample_lists = 5;
  repeated string game_lists = 6;
}